# cpp-rrb

./: CMakeLists.txt  License.txt  README.md
immutable/: CMakeLists.txt  rrb.h  rrb_debug.h  rrb_transient.h  vector.h
test/: CMakeLists.txt  rrb_tests.cpp  rrb_tests.h  test.cpp  test_assert.cpp  vector_tests.cpp  vector_tests.h
